added nodemon support

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,5 +10,5 @@ services:
       DEBUG: teochew-dictionary-backend:*
     ports:
       - 3000:3000
-    command: npm start
+    command: npm run devstart_dock
     
